Janitor cleanup (FindBugs).